--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>     
         <meta charset="UTF-8">
         <title>Feminist Coalition</title>
-        <link rel="stylesheet" href="CSS/style.css">
+        <link rel="stylesheet" href="style.css">
       
 <body>
     <div>
@@ -11,7 +11,7 @@
     <h1><strong>FEMINIST COALITION</strong></h1>
 
     <div class=image>
-        <img src="images/Feministcoalition.png" alt="Feminist Coalition logo">
+        <img src="Feministcoalition.png" alt="Feminist Coalition logo">
     </div>
    
     </div>
