--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
         <div class="bottom-container">
             <div>
                 <h2 class="head"> <strong>IN OUR OWN WORDS:THE FEMINIST COALITION </strong> <br>
-                    Successful people always talk about launching projects and figuring out <br>
-                    the fine details after. We hear this and usually never apply it, out of fear of failure. <br>
-                    For the Feminist Coalition, we spent months planning our launch as a women’s <br>
-                    rights advocacy group and yet our roll out was nothing we could have ever predicted...<br>
+                    Successful people always talk about launching projects and figuring out
+                    the fine details after. We hear this and usually never apply it, out of fear of failure.
+                    For the Feminist Coalition, we spent months planning our launch as a women’s 
+                    rights advocacy group and yet our roll out was nothing we could have ever predicted... <br>
                     <a href="https://feministcoalition.medium.com/in-our-own-words-the-feminist-coalition-61bc658446dd">Continue reading</a>
 
                 </h2>
@@ -44,7 +44,7 @@
                 <h2 class="lastheading">
                     <strong>EndSARS 2020 PROJECT</strong>
                     <hr class="line"> <br>
-                    <p>
+                    <p class="para">
                     <a href="https://drive.google.com/file/d/1-q4FJarjrRn0rCLarLvqKRLLSB04qVMS/view"> The Feminist Coalition - EndSARS Project Audited Accounts - March 2021 </a>             
                 <br>
                 <a href="https://www.notion.so/80db6dfdd25f4277a5bc0fbcdc612857">Protests Supported by the Feminist Coalition</a>
